# tokenizer

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: tokenizer.h
src/: main.cpp  tokenizer.cpp
tests/: tokenizer_test.cpp
